# bellwether

./: .env.example  .gitignore  README.md  config.example.yaml  index.html  posts.json  pyproject.toml  requirements.txt  style.css
bellwether/: __init__.py  cli.py  config.py  executor.py  factory.py  models.py  news.py  portfolio.py  report.py  risk.py  storage.py  trader.py
bellwether/blog/: __init__.py  generator.py  publish.py  publisher.py  site.py
bellwether/learning/: __init__.py  autotune.py  discovery.py  journal.py  memory.py  reflect.py  reliability.py
bellwether/notify/: __init__.py  base.py  console.py  email.py  sms.py
bellwether/signals/: __init__.py  base.py  engine.py  llm.py  momentum.py  trending.py
bellwether/venues/: __init__.py  base.py  kraken.py  paper.py
deploy/: ORACLE.md  autoupdate.sh  bellwether-update.service  bellwether-update.timer  bellwether.service  bootstrap.sh  bw  setup_vm.sh
posts/: 2026-06-26.html  2026-06-27.html  2026-06-28.html  2026-06-29.html  2026-06-30.html  2026-07-01.html
tests/: test_blog.py  test_kraken.py  test_learning.py  test_llm.py  test_news.py  test_paper_venue.py  test_portfolio.py  test_reconcile.py  test_risk.py  test_signals.py  test_trader_and_report.py  test_trader_live.py
