[project]
name = "bellwether"
version = "0.1.0"
description = "An autonomous prediction-market trading bot with AI signals and daily reports"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sharib Kabani" }]
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]

[project.scripts]
bellwether = "bellwether.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bellwether*"]
